--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -1568,107 +1568,107 @@ stories:
   domain: http://www.wyomingwebworks.org/
   link: http://wyomingwebworks.org/taking-care-of-your-office-appliances-in-the-right-way/
 images:
-- name: art-museum-art-museum-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-copper-circuit.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-colored-circuits.jpg
-- name: store-on-corner-store-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-plentiful.jpg
-- name: amusement-park-amusement-park-2-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-post-modern.jpg
-- name: legal-statue-legalstatue-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-nazi-poster.jpg
-- name: white-house-whitehouse-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-blue-brush.jpg
-- name: downtheline-downtheline-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-light-dali.jpg
-- name: catacombs-catacombs-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-circuit-5.jpg
-- name: oldhouse-granaryfield-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-alien-goggles.jpg
-- name: downtheline-downtheline-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-atari-missle.jpg
-- name: store-on-corner-oldcabin-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dark-rain.jpg
-- name: power-lines-power-lines-empty-space-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-diego-rivera1.jpg
-- name: stalin-time-crypto-wheels-old-compute-bletchley.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-crypto-wheels-old-compute-bletchley.jpg
-- name: oldhouse-oldhouse-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-kand-two.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
-- name: stories-new-downtheline-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-downtheline-dark-dali.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-post-modern.jpg
-- name: mosaic-face-mosaic-face-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-monet-one.jpg
-- name: bf-skinner-bridge-over-columbia.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-bridge-over-columbia.jpg
-- name: gypsy-wagon-gypsywagon-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-cinnamon-rolls.jpg
-- name: school-clouds-church-clouds-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colored-circuits.jpg
-- name: cargo-ship-cargo-ship-on-sea-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-green-zuma.jpg
-- name: cyber-api-description-wars-img-3820-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-img-3820-dark-dali.jpg
-- name: la-muse-capital_36728421355_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-capital_36728421355_o.jpg
-- name: white-house-lawn-white-house-window-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-colorful-blocks.jpg
-- name: copper-circuit-san-pedro-light-cities.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-san-pedro-light-cities.jpg
-- name: border-crossing-bordercrossing-pablo-blue.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-pablo-blue.png
-- name: curtain-curtain-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-smooth-ride.jpg
-- name: ellis-island-ellisisland-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-pablo-blue.jpg
-- name: white-house-whitehouse-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-nazi-poster.jpg
-- name: christianity-christianity-under-construction-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-propaganda-leaflets.jpg
-- name: school-clouds-church-clouds-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colorful-dream.jpg
-- name: christianity-christianity-under-construction-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-mucha-mult.jpg
-- name: crow_purple_storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_purple_storm.jpg
-- name: statue-of-liberty-front-view-statueofliberty-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-ww2-color.jpg
-- name: hollywood-building-hollywood-building-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-attack-planes.jpg
-- name: mistywoods-babyfoot-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-ww2-dresden.jpg
-- name: oldhouse-granaryfield-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-really-hot.jpg
+- name: oldhouse-granaryfield-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-rainbow-festival.jpg
+- name: dc-statue-dcstatue-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-green-zuma.jpg
+- name: san-francisco-street-view-san-francisco-street-view-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dark-rain.jpg
+- name: windowmountain-window-mountain-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-colored-circuits.jpg
+- name: window-window-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-really-hot.jpg
+- name: catacombs-catacombs-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-circuit-4.jpg
+- name: san-francisco-street-view-san-francisco-street-view-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-spagetti-accident.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-oily-mcoilface.jpg
+- name: power-lines-power-lines-empty-space-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-circuit.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-wols.jpg
+- name: store-on-corner-oldcabin-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dark-dali.jpg
+- name: amusement-park-amusement-park-2-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-dark-dali.jpg
 - name: old-door-lock-old-door-lock-nazi-poster.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-nazi-poster.jpg
-- name: copper-circuit-sunflower-big-green.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-sunflower-big-green.jpg
-- name: aws-s3-schoolhouse-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-schoolhouse-dark-dali.jpg
-- name: border-fence-border-fence-on-hill-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-internet-numbers.jpg
-- name: liberty-back-statue-liberty-back-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-rainbow-festival.jpg
-- name: crow-crow-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-atari-missle.jpg
-- name: wave-DSC_0291.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-DSC_0291.jpg
-- name: capital-battle-capitolbattle-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-blue-electricity.jpg
-- name: stories-machine-road-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-machine-road-light-dali.jpg
-- name: oldbarn-oldbarn-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-dali-three.jpg
-- name: lincoln-memorial-lincolnmemorial-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dali-three.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-kandinsky-bv.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-kandinsky-bv.JPG
-- name: amusement-park-amusement-park-2-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colorful-dream.jpg
+- name: oldsmallboat-oldsmallboat-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-sand-paper.jpg
+- name: flower-barbed-wire-flower-barbed-wire-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-graham-sutherland.jpg
+- name: capital-battle-capitolbattle-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-atari-asteroids.jpg
+- name: capital-battle-capitolbattle-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-alberto-giacometti.jpg
+- name: dragon-desert-desert-dragon-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-neo-instinct.jpg
+- name: death-valley-death-valley-national-park-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-marcel-duchamp.jpg
+- name: statue-of-liberty-front-view-statueofliberty-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-constitution.jpg
+- name: old-school-house-old-schoolhouse-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-marcel-duchamp.jpg
+- name: old-cabin-oldcabin-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-purple-storm.jpg
+- name: bf-skinner-ship-bird-foreground.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-ship-bird-foreground.jpg
+- name: oldhousecars-house-old-cars-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-cinnamon-rolls.jpg
+- name: yosemite-yosemite-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-wols.jpg
+- name: oldhousecars-house-old-cars-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-crafty-painting.jpg
+- name: oldcabin-store-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-internet-numbers.jpg
+- name: supreme-court-supremecourt-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-sunday.jpg
+- name: old-school-house-old-schoolhouse-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dry-skin.jpg
+- name: nazi-invasion-downtown-berlin-crowds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-berlin-crowds.jpg
+- name: san-francisco-street-view-san-francisco-street-view-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-clean-view.jpg
+- name: walled-garden-walled-garden-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-marcel-duchamp.jpg
+- name: rockingchair-rockingchair-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-sand-paper.jpg
+- name: miamibeach-miamibeach-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-monet-one.jpg
+- name: yosemite-yosemite-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-diego-rivera1.jpg
+- name: nazi-invasion-statue-of-liberty_36744433525_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-of-liberty_36744433525_o.jpg
+- name: old-door-lock-old-door-lock-2-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dark-soul.jpg
+- name: white-house-lawn-white-house-lawn-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-marcel-duchamp.jpg
+- name: san-francisco-street-view-san-francisco-street-view-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-marcel-duchamp.jpg
+- name: stalin-time-old-time-cash-register.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-time-cash-register.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-matrix.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-matrix.JPG
+- name: oldhousecars-house-old-cars-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-propaganda-leaflets.jpg
+- name: old-barn-old-barn-1500-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-neo-instinct.jpg
+- name: copper-circuit-old-broken-piano-street.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-broken-piano-street.jpg
+- name: oldtrain-oldtrain-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-colorful-dream.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-internet-numbers.jpg
+- name: server-cloud-server-racks-door-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-free-woman.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-neo-instinct.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-neo-instinct.JPG
+- name: castle-wall-DSC-0067-purple-storm.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-purple-storm.JPG
+- name: la-muse-docs-cranes-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-docs-cranes-waterfront.jpg
+- name: old-church-oldchurch-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-sunday.jpg
 ---
 White Pine Gets Grant To Promote Train, Biking Trails From Commission.&nbsp;Cinema Cinema's New And Noteworthy.&nbsp;How To Help Your Kids Celebrate The New Year.&nbsp;Flint Hills Media Buys Clay Center Dispatch.&nbsp;Heard It On The Streets.&nbsp;Arkansas Georgia Tech Basketball.&nbsp;From Sweeping Vistas To Intimate Scenes, Check Out 2019's Best Photos.&nbsp;Florida Schools Win In First Day Action.&nbsp;
